--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -15,6 +15,7 @@
   display:flex;
   flex-direction:column;
   gap:18px;
+  /* position:sticky; */
   background: linear-gradient(180deg, rgba(255,255,255,0.68), rgba(179, 141, 114, 0.6));
   border-right: 1px solid rgba(255,255,255,0.6);
   backdrop-filter: blur(10px) saturate(110%);
