--- a/src/pages/SettingsPage.css
+++ b/src/pages/SettingsPage.css
@@ -3,7 +3,7 @@
 .settings-page {
   padding: 22px;
   /* background: transparent; */
-  background-color:#ddcac1;
+  background-color:#00bfa6;
   border-radius: 12px;
 }
 
